[corda] Ansible automation with new helm charts
Signed-off-by: Roy,Sownak <sownak.roy@accenture.com>

--- a/platforms/r3-corda/charts/corda-node/values.yaml
+++ b/platforms/r3-corda/charts/corda-node/values.yaml
@@ -41,7 +41,7 @@ image:
   pullPolicy: IfNotPresent
   h2: ghcr.io/hyperledger/h2:2018
   #Provide the containerName of image
-  #Eg. containerName: ghcr.io/hyperledger/bevel-corda:4.9
+  #Eg. corda: ghcr.io/hyperledger/bevel-corda:4.9
   corda:
     repository: ghcr.io/hyperledger/bevel-corda
     tag: 4.9
