--- a/platforms/hyperledger-fabric/configuration/samples/network-fabricv2.yaml
+++ b/platforms/hyperledger-fabric/configuration/samples/network-fabricv2.yaml
@@ -26,6 +26,11 @@ network:
        - example1: example2
       deployment: {} 
       pvc: {}
+    labels:
+      service: 
+        example1: example2
+      deployment: {} 
+      pvc: {}
   # For providing Custom Templates to generate configtx.yaml
   configtx:
     custom: false               # true : when custom tpl(s) are to be provided | false : when the default tpl(s) are to be used
