[r3-corda] Cordapps download with secrets
Signed-off-by: Roy,Sownak <sownak.roy@accenture.com>

--- a/platforms/hyperledger-besu/charts/besu-node/templates/node-statefulset.yaml
+++ b/platforms/hyperledger-besu/charts/besu-node/templates/node-statefulset.yaml
@@ -96,6 +96,8 @@ spec:
       - name: {{ .Release.Name }}-besu
         image: {{ .Values.image.besu.repository }}:{{ .Values.image.besu.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        securityContext:
+          runAsUser: 0
         resources:
           requests:
             cpu: "{{ .Values.node.besu.resources.cpuRequest }}"
