--- a/platforms/r3-corda/charts/corda-node/values.yaml
+++ b/platforms/r3-corda/charts/corda-node/values.yaml
@@ -117,7 +117,8 @@ nodeConf:
 cordApps: 
   #Provide if you want to provide jars in cordApps
   #Eg. getCordApps: true or false
-  getCordApps: false  
+  getCordApps: false
+  mavenSecret:
   jars:
     #Provide url to download the jar using wget cmd
     #Eg. url: https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases/net/corda/corda-finance/3.3-corda/corda-finance-3.3-corda.jar 
