--- a/platforms/r3-corda/configuration/roles/create/secrets/tasks/main.yaml
+++ b/platforms/r3-corda/configuration/roles/create/secrets/tasks/main.yaml
@@ -30,3 +30,13 @@
     check: "docker_credentials"
   when: 
   - network.docker.username is defined
+  
+# Create the user credentials for cordapp registry
+- name: "Create maven credentials secret"
+  include_role:
+    name: "{{ playbook_dir }}/../../shared/configuration/roles/create/shared_k8s_secrets"
+  vars: 
+    namespace: "{{ component_ns }}"    
+    check: "maven_credentials"
+  when: 
+  - org.cordapps.username is defined
