[indy] Upgrade to 1.12.6 and support for Kubernetes 1.28+
Signed-off-by: Roy,Sownak <sownak.roy@accenture.com>

--- a/platforms/hyperledger-indy/charts/indy-node/templates/configmap.yaml
+++ b/platforms/hyperledger-indy/charts/indy-node/templates/configmap.yaml
@@ -7,10 +7,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ $.Values.metadata.name }}-config
-  namespace: {{ $.Values.metadata.namespace }}
+  name: {{ $.Values.node.name }}-config
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ $.Values.metadata.name }}-config
+    app.kubernetes.io/name: {{ $.Values.node.name }}-config
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
