--- a/platforms/hyperledger-indy/charts/indy-node/templates/service.yaml
+++ b/platforms/hyperledger-indy/charts/indy-node/templates/service.yaml
@@ -7,8 +7,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ $.Values.metadata.name }}"
-  namespace: "{{ $.Values.metadata.namespace }}"
+  name: "{{ $.Values.node.name }}"
+  namespace: {{ .Release.Namespace }}
 spec:
   type: {{ $.Values.service.type }}
   ports:
@@ -25,7 +25,7 @@ spec:
     nodePort: {{ $.Values.service.ports.clientTargetPort }}
     {{ end }}
   selector:
-    app: "{{ $.Values.metadata.name }}"
+    app: "{{ $.Values.node.name }}"
 
 {{- if eq $.Values.proxy.provider "ambassador" }}
 ---
@@ -33,7 +33,7 @@ apiVersion: getambassador.io/v3alpha1
 kind: Listener
 metadata:
   name: "{{ .Values.node.name }}-node-listener"
-  namespace: {{ .Values.metadata.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   port: {{ .Values.node.ambassadorPort }}
   protocol: TCP
@@ -46,17 +46,17 @@ apiVersion: getambassador.io/v3alpha1
 kind: TCPMapping
 metadata:
   name: "{{ .Values.node.name }}-node-mapping"
-  namespace: {{ .Values.metadata.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   port: {{ .Values.node.ambassadorPort }}
-  service: "{{ .Values.node.name }}.{{ .Values.metadata.namespace }}:{{ .Values.node.targetPort }}"
+  service: "{{ .Values.node.name }}.{{ .Release.Namespace }}:{{ .Values.service.ports.nodeTargetPort }}"
 
 ---
 apiVersion: getambassador.io/v3alpha1
 kind: Listener
 metadata:
   name: "{{ .Values.node.name }}-client-listener"
-  namespace: {{ .Values.metadata.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   port: {{ .Values.client.ambassadorPort }}
   protocol: TCP
@@ -69,9 +69,9 @@ apiVersion: getambassador.io/v3alpha1
 kind: TCPMapping
 metadata:
   name: "{{ .Values.node.name }}-client-mapping"
-  namespace: {{ .Values.metadata.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   port: {{ .Values.client.ambassadorPort }}
-  service:  "{{ .Values.client.name }}.{{ .Values.metadata.namespace }}:{{ .Values.client.targetPort }}"
+  service:  "{{ .Values.node.name }}.{{ .Release.Namespace }}:{{ .Values.service.ports.clientTargetPort }}"
 {{- end }}
 
