--- a/platforms/hyperledger-indy/configuration/roles/check/k8_component/tasks/main.yaml
+++ b/platforms/hyperledger-indy/configuration/roles/check/k8_component/tasks/main.yaml
@@ -27,7 +27,7 @@
     service_account: "{{ component_name }}"
     role: "ro"
   shell: |
-    secret="$(KUBECONFIG={{ kubernetes.config_file }} kubectl get serviceaccount {{ service_account }} -n {{ component_ns }} -o go-template={% raw %}'{{ (index .secrets 0).name }}'{% endraw %})"
+    secret="{{ service_account }}-token"
     kube_token="$(KUBECONFIG={{ kubernetes.config_file }} kubectl get secret ${secret} -n {{ component_ns }} -o go-template={% raw %}'{{ .data.token }}'{% endraw %} | base64 -d)"
     vault_token=$(curl --request POST --data '{"jwt": "'"$kube_token"'", "role": "{{ role }}"}' {{ vault.url }}/v1/auth/kubernetes-{{ organization }}-bevel-ac-auth/login | jq -j '.auth.client_token')
     echo ${vault_token}
