--- a/platforms/hyperledger-indy/configuration/samples/network-indyv3-aries.yaml
+++ b/platforms/hyperledger-indy/configuration/samples/network-indyv3-aries.yaml
@@ -14,7 +14,7 @@ network:
   # Network level configuration specifies the attributes required for each organization
   # to join an existing network.
   type: indy
-  version: 1.11.0                         # Supported versions 1.11.0 and 1.12.1
+  version: 1.12.1                         # Supported versions 1.11.0 and 1.12.1
 
   #Environment section for Kubernetes setup
   env:
@@ -65,7 +65,8 @@ network:
         region: "region"                        # AWS region
 
       publicIps: ["1.1.1.1", "2.2.2.2"]          # List of all public IP addresses of each availability zone from all organizations in the same k8s cluster
-
+      azure:
+        node_resource_group: "MC_myResourceGroup_myCluster_westeurope"
       # Kubernetes cluster deployment variables. The config file path has to be provided in case
       # the cluster has already been created.
       k8s:
@@ -118,7 +119,8 @@ network:
         region: "region"                        # AWS region
 
       publicIps: ["192.168.99.173"]             # List of all public IP addresses of each availability zone from all organizations in the same k8s cluster
-
+      azure:
+        node_resource_group: "MC_myResourceGroup_myCluster_westeurope"
       # Kubernetes cluster deployment variables. The config file path has to be provided in case
       # the cluster has already been created.
       k8s:
