--- a/platforms/hyperledger-indy/configuration/samples/network-indyv3.yaml
+++ b/platforms/hyperledger-indy/configuration/samples/network-indyv3.yaml
@@ -16,7 +16,7 @@ network:
   # Network level configuration specifies the attributes required for each organization
   # to join an existing network.
   type: indy
-  version: 1.11.0                         # Supported versions 1.11.0 and 1.12.1
+  version: 1.12.1                         # Supported versions 1.11.0 and 1.12.1
 
   #Environment section for Kubernetes setup
   env:
@@ -67,7 +67,8 @@ network:
         region: "region"                        # AWS region
 
       publicIps: ["1.1.1.1", "2.2.2.2"]        # List of all public IP addresses of each availability zone from all organizations in the same k8s cluster
-
+      azure:
+        node_resource_group: "MC_myResourceGroup_myCluster_westeurope"
       # Kubernetes cluster deployment variables. The config file path has to be provided in case
       # the cluster has already been created.
       k8s:
@@ -120,7 +121,8 @@ network:
         region: "region"                        # AWS region
 
       publicIps: ["3.221.78.194"]               # List of all public IP addresses of each availability zone from all organizations in the same k8s cluster
-
+      azure:
+        node_resource_group: "MC_myResourceGroup_myCluster_westeurope"
       # Kubernetes cluster deployment variables. The config file path has to be provided in case
       # the cluster has already been created.
       k8s:
@@ -209,7 +211,8 @@ network:
         region: "region"                        # AWS region
       
       publicIps: ["3.221.78.194"]             # List of all public IP addresses of each availability zone from all organizations in the same k8s cluster
-
+      azure:
+        node_resource_group: "MC_myResourceGroup_myCluster_westeurope"
       # Kubernetes cluster deployment variables. The config file path has to be provided in case
       # the cluster has already been created.
       k8s:
