--- a/platforms/shared/configuration/roles/setup/edge-stack/tasks/main.yaml
+++ b/platforms/shared/configuration/roles/setup/edge-stack/tasks/main.yaml
@@ -47,7 +47,7 @@
 - name: Create custom values for aes helm chart
   vars:
     ports: "{{ network.env.ambassadorPorts.ports | default([]) }}"
-    elastic_ip: "{{ allocation_ips_stdout | default('') }}"
+    elastic_ip: "{{ allocation_ips_stdout | default(item.publicIps[0]) }}"
     lbSourceRangeDefault:
       - 0.0.0.0/0
     loadBalancerSourceRanges: "{{ network.env.loadBalancerSourceRanges | default(lbSourceRangeDefault) }}"
