[fabic] Introduce helm chart deployment capability for version 2.5
**Primary Changes**

1. This PR includes changes to deploy fabric 2.5.4 without a channel using helm charts.
2. Version 2.2.2 is pending
3. Deploy with Ansible pending

**Changes in charts**
platforms/hyperledger-fabric/charts/fabric-ca-server
platforms/hyperledger-fabric/charts/fabric-cacerts-gen
platforms/hyperledger-fabric/charts/fabric-catools
platforms/hyperledger-fabric/charts/fabric-cli
platforms/hyperledger-fabric/charts/fabric-orderernode
platforms/hyperledger-fabric/charts/fabric-peernode

fixes #2484

Signed-off-by: mgCepeda <marina.gomez.cepeda@accenture.com>

--- a/platforms/hyperledger-fabric/charts/fabric-cli/templates/volume.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-cli/templates/volume.yaml
@@ -8,12 +8,12 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ $.Values.peer.name }}-cli-pvc
-  namespace: {{ $.Values.metadata.namespace }}
+  name: {{ .Release.Name }}-cli-pvc
+  namespace: {{ .Release.Namespace }}
   labels:
     {{ include "labels.pvc" . | nindent 2 }}
 spec:
-  storageClassName: {{ $.Values.storage.class }}
+  storageClassName: storage-{{ .Release.Name }}
   accessModes:
     - ReadWriteOnce
   resources:
