--- a/platforms/hyperledger-fabric/charts/fabric-ca-server/templates/service.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-ca-server/templates/service.yaml
@@ -7,81 +7,75 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ $.Values.server.name }}
-  namespace: {{ $.Values.metadata.namespace }}
-  annotations:
-    {{- if $.Values.annotations }}
-    {{- range $key, $value := $.Values.annotations.service }}
-    {{- range $k, $v := $value }}
-    {{ $k }}: {{ $v | quote }}
-    {{- end }}
-    {{- end }}
-    {{- end }}
+  name: {{ .Release.Name }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    run: {{ $.Values.server.name }}
-    app.kubernetes.io/name: {{ $.Values.server.name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/component: fabric
+    app.kubernetes.io/part-of: {{ include "fabric-ca-server.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }} 
-    {{- include "labels.custom" . | nindent 2 }}
     {{- include "labels.service" . | nindent 2 }}
 spec:
-  type: {{ $.Values.service.servicetype }}
+  type: ClusterIP
   selector:
-    name: {{ $.Values.server.name }}
+    app.kubernetes.io/part-of: {{ include "fabric-ca-server.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
   ports:
   - name: tcp
     protocol: TCP
     targetPort: 7054
-    port: {{ $.Values.service.ports.tcp.clusteripport }}
-    {{- if $.Values.service.ports.tcp.nodeport }}
-    nodePort: {{ $.Values.service.ports.tcp.nodeport }}
+    port: {{ $.Values.service.ports.tcp.clusterIpPort }}
+    {{- if $.Values.service.ports.tcp.nodePort }}
+    nodePort: {{ $.Values.service.ports.tcp.nodePort }}
     {{- end }}
   - name: operations
     protocol: TCP
     targetPort: 9443
     port: 9443
 
-{{- if eq $.Values.proxy.provider "haproxy" }}
+{{- if eq $.Values.global.proxy.provider "haproxy" }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ $.Values.server.name }}
-  namespace:  {{ $.Values.metadata.namespace }}
+  name: {{ .Release.Name }}
+  namespace:  {{ .Release.Namespace }}
   annotations:
     kubernetes.io/ingress.class: "haproxy"
     ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   rules:
-  - host: ca.{{ $.Values.metadata.namespace }}.{{ $.Values.proxy.external_url_suffix }}
+  - host: ca.{{ .Release.Namespace }}.{{ $.Values.global.proxy.externalUrlSuffix }}
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: {{ $.Values.server.name }}
+            name: {{ .Release.Name }}
             port:
-              number: {{ $.Values.service.ports.tcp.clusteripport }}
+              number: {{ $.Values.service.ports.tcp.clusterIpPort }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ $.Values.server.name }}-ops
-  namespace:  {{ $.Values.metadata.namespace }}
+  name: {{ .Release.Name }}-ops
+  namespace:  {{ .Release.Namespace }}
   annotations:
     kubernetes.io/ingress.class: "haproxy"    
 spec:
   rules:
-  - host: ca-ops.{{ $.Values.metadata.namespace }}.{{ $.Values.proxy.external_url_suffix }}
+  - host: ca-ops.{{ .Release.Namespace }}.{{ $.Values.global.proxy.externalUrlSuffix }}
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: {{ $.Values.server.name }}
+            name: {{ .Release.Name }}
             port:
               number: 9443
 {{- end }}
