--- a/platforms/hyperledger-fabric/charts/fabric-catools/templates/volume.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-catools/templates/volume.yaml
@@ -9,46 +9,30 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ca-tools-crypto-pvc
-  namespace: {{ $.Values.metadata.namespace }}
+  namespace: {{ .Release.Namespace }}
   annotations:
-    {{- if $.Values.annotations }}
-    {{- range $key, $value := $.Values.annotations.pvc }}
-    {{- range $k, $v := $value }}
-      {{ $k }}: {{ $v | quote }}
-    {{- end }}
-    {{- end }}
-    {{- end }}    
-  labels:
     {{ include "labels.pvc" . | nindent 2 }}  
 spec:
-  storageClassName: {{ $.Values.storage.storageclassname }}
+  storageClassName: storage-{{ .Release.Name }}
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ $.Values.storage.storagesize }}
+      storage: {{ $.Values.storage.size }}
 
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ca-tools-pvc
-  namespace: {{ $.Values.metadata.namespace }}
+  namespace: {{ .Release.Namespace }}
   annotations:
-    {{- if $.Values.annotations }}
-    {{- range $key, $value := $.Values.annotations.pvc }}
-    {{- range $k, $v := $value }}
-      {{ $k }}: {{ $v | quote }}
-    {{- end }}
-    {{- end }}
-    {{- end }}    
-  labels:
-    {{ include "labels.pvc" . | nindent 2 }}     
+    {{ include "labels.pvc" . | nindent 2 }} 
 spec:
-  storageClassName: {{ $.Values.storage.storageclassname }}
+  storageClassName: storage-{{ .Release.Name }}
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ $.Values.storage.storagesize }}
+      storage: {{ $.Values.storage.size }}
 
