--- a/platforms/hyperledger-fabric/charts/fabric-cli/templates/deployment.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-cli/templates/deployment.yaml
@@ -7,8 +7,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.peer.name }}-cli
-  namespace: {{ .Values.metadata.namespace }}
+  name: {{ template "fabric-cli.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{ include "labels.deployment" . | nindent 2 }}
 spec:
@@ -22,19 +22,19 @@ spec:
         app: cli
         {{ include "labels.deployment" . | nindent 6 }}
     spec:
-      serviceAccountName: {{ $.Values.vault.serviceaccountname }}
-      {{- if .Values.vault.imagesecretname }}
+      serviceAccountName: {{ $.Values.global.serviceAccountName }}
+      {{- if .Values.global.vault.imageSecretName }}
       imagePullSecrets:
-        - name: {{ $.Values.vault.imagesecretname }}
+        - name: {{ $.Values.global.vault.imageSecretName }}
       {{- end }}
       volumes:
-      - name: {{ .Values.peer.name }}-cli-pv
+      - name: {{ .Release.Name }}-cli-pv
         persistentVolumeClaim:
-          claimName: {{ .Values.peer.name }}-cli-pvc
-      {{ if .Values.vault.tls  }}
+          claimName: {{ .Release.Name }}-cli-pvc
+      {{ if .Values.global.vault.tls  }}
       - name: vaultca
         secret:
-          secretName: {{ $.Values.vault.tls }}
+          secretName: {{ $.Values.global.vault.tls }}
           items:
           - key: ca.crt.pem
             path: ca-certificates.crt
@@ -50,50 +50,91 @@ spec:
           name: package-manager
       initContainers:
       - name: certificates-init
-        image: {{ $.Values.metadata.images.alpineutils }}
+        image: {{ $.Values.image.alpineUtils }}
         imagePullPolicy: IfNotPresent
         env:
         - name: VAULT_ADDR
-          value: {{ $.Values.vault.address }}
+          value: {{ $.Values.global.vault.address }}
+        - name: VAULT_SECRET_ENGINE
+          value: "{{ $.Values.global.vault.secretEngine }}"
+        - name: VAULT_SECRET_PREFIX
+          value: "{{ $.Values.global.vault.secretPrefix }}"
         - name: KUBERNETES_AUTH_PATH
-          value: {{ $.Values.vault.authpath }}
+          value: {{ $.Values.global.vault.authPath }}
         - name: VAULT_APP_ROLE
-          value: {{ $.Values.vault.role }}
-        - name: VAULT_PEER_SECRET_PREFIX
-          value: "{{ $.Values.vault.adminsecretprefix }}"
-        - name: VAULT_ORDERER_SECRET_PREFIX
-          value: "{{ $.Values.vault.orderersecretprefix }}"
+          value: {{ $.Values.global.vault.role }}
         - name: MOUNT_PATH
           value: "/secret"
         - name: VAULT_TYPE
-          value: "{{ $.Values.vault.type }}"
+          value: "{{ $.Values.global.vault.type }}"
+        - name: CORE_PEER_ADDRESS
+          value: "{{ .Release.Name }}.{{ $.Values.peer.address }}"
         command: ["sh", "-c"]
         args:
         - |-
           #!/usr/bin/env sh
           . /scripts/bevel-vault.sh
 
+{{- if eq .Values.global.vault.type "hashicorp" }}
+
           # Calling a function to retrieve the vault token.
+          echo "------------ ${VAULT_ADDR}----------------"
           vaultBevelFunc "init"
 
-          echo "Getting Orderer TLS certificates from Vault using key $vault_secret_key"
-          vaultBevelFunc "readJson" "${VAULT_ORDERER_SECRET_PREFIX}/tls"
+          function getOrdererTlsSecret {
+            KEY=$1
+            KEY_FORMATTED=$(echo $KEY | tr - /)
+       
+            echo "Getting Orderer TLS certificates from Vault using key $vault_secret_key"
+            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
 
-          TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
-          OUTPUT_PATH="${MOUNT_PATH}/orderer/tls"
-          mkdir -p ${OUTPUT_PATH}
-          echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
+            TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
+            echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
+          }
 
           ###############################################################################
 
-          echo "Getting MSP certificates from Vault using key $vault_secret_key"
-          vaultBevelFunc "readJson" "${VAULT_PEER_SECRET_PREFIX}/msp"
+          function getAdminMspSecret {
+            KEY=$1
+            KEY_FORMATTED=$(echo $KEY | tr - /)
 
-          ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
-          CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
-          KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
-          SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
-          TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
+            echo "Getting MSP certificates from Vault."
+            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
+
+            ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
+            CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
+            KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
+            SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
+            TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
+
+            echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
+            echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
+            echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
+            echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
+            echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+          }
+
+{{- else }}
+
+          function getOrdererTlsSecret {
+            KEY=$1
+            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.cacrt}" | base64 -d > ${OUTPUT_PATH}/ca.crt
+          }
+
+          function getAdminMspSecret {
+            KEY=$1
+            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.admincerts}" | base64 -d > ${OUTPUT_PATH}/admincerts/admin.crt
+            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.cacerts}" | base64 -d > ${OUTPUT_PATH}/cacerts/ca.crt
+            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.keystore}" | base64 -d > ${OUTPUT_PATH}/keystore/server.key
+            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.signcerts}" | base64 -d > ${OUTPUT_PATH}/signcerts/server.crt
+            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.tlscacerts}" | base64 -d > ${OUTPUT_PATH}/tlscacerts/tlsca.crt                     
+          }
+
+{{- end }} 
+
+          OUTPUT_PATH="${MOUNT_PATH}/orderer/tls"
+          mkdir -p ${OUTPUT_PATH}
+          getOrdererTlsSecret orderer-tls
 
           OUTPUT_PATH="${MOUNT_PATH}/admin/msp"
           mkdir -p ${OUTPUT_PATH}/admincerts
@@ -101,16 +142,12 @@ spec:
           mkdir -p ${OUTPUT_PATH}/keystore
           mkdir -p ${OUTPUT_PATH}/signcerts
           mkdir -p ${OUTPUT_PATH}/tlscacerts
+          getAdminMspSecret admin-msp  
 
-          echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-          echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-          echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-          echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-          echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
         volumeMounts:
         - name: certificates
           mountPath: /secret
-        {{ if .Values.vault.tls  }}
+        {{ if .Values.global.vault.tls  }}
         - name: vaultca
           mountPath: "/etc/ssl/certs/"
           readOnly: true
@@ -123,7 +160,7 @@ spec:
           subPath: package-manager.sh
       containers:
       - name: cli
-        image: {{ $.Values.metadata.images.fabrictools }}
+        image: {{ $.Values.image.fabricTools }}:{{ $.Values.network.version }}
         imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
@@ -135,25 +172,25 @@ spec:
         - name: FABRIC_LOGGING_SPEC
           value: "debug"
         - name: CORE_PEER_ID
-          value: "{{ .Values.peer.name }}.{{ .Values.metadata.namespace }}"
+          value: "{{ .Release.Name }}.{{ .Release.Namespace }}"
         - name: CORE_PEER_ADDRESS
-          value: "{{ .Values.peer.address }}"
+          value: "{{ .Release.Name }}.{{ $.Values.peer.address }}"
         - name: CORE_PEER_LOCALMSPID
-          value: "{{ .Values.peer.localmspid }}"
+          value: "{{ .Values.peer.localMspId }}"
         - name: CORE_PEER_TLS_ENABLED
-          value: "{{ .Values.peer.tlsstatus }}"
+          value: "{{ $.Values.peer.tlsStatus }}"
         - name: CORE_PEER_TLS_ROOTCERT_FILE
           value: /opt/gopath/src/github.com/hyperledger/fabric/crypto/admin/msp/tlscacerts/tlsca.crt
         - name: ORDERER_CA
           value: /opt/gopath/src/github.com/hyperledger/fabric/crypto/orderer/tls/ca.crt
         - name: ORDERER_URL
-          value: "{{ .Values.orderer.address }}"
+          value: "{{ $.Values.orderer.address }}"
         - name: CORE_PEER_MSPCONFIGPATH
           value: /opt/gopath/src/github.com/hyperledger/fabric/crypto/admin/msp
         volumeMounts:
         - name: certificates
           mountPath: /opt/gopath/src/github.com/hyperledger/fabric/crypto
-        - name: {{ .Values.peer.name }}-cli-pv
+        - name: {{ .Release.Name }}-cli-pv
           mountPath: /opt/gopath/src/github.com/chaincode
         - name: package-manager
           mountPath: /scripts/package-manager.sh
