--- a/platforms/hyperledger-fabric/charts/fabric-cli/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-cli/values.yaml
@@ -6,74 +6,69 @@
 
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+global:
+  #Provide the service account name which will be created.
+  serviceAccountName: vault-auth
+  vault:
+    #Provide the type of vault
+    #Eg. type: hashicorp
+    type: hashicorp
+    #Provide the vaultrole for an organization
+    #Eg. vaultrole: org1-vault-role
+    role: vault-role
+    #Provide the vault server address
+    #Eg. vaultaddress: http://Vault-884963190.eu-west-1.elb.amazonaws.com
+    address:
+    #Provide the kubernetes auth backed configured in vault for an organization
+    #Eg. authpath: supplychain
+    authPath: supplychain
+    #Provide the secret engine.
+    secretEngine: secretsv2
+    #Provide the vault path where the secrets will be stored
+    secretPrefix: "data/supplychain"
+    #Provide the imagesecretname for vault
+    #Eg. imagesecretname: regcred
+    imageSecretName: ""
+    #Kuberenetes secret for vault ca.cert
+    #Enable or disable TLS for vault communication if value present or not
+    #Eg. tls: vaultca
+    tls: 
 
-metadata:
-  #Provide the namespace for organization's peer
-  #Eg. namespace: org1-net
-  namespace: org1-net
-  images:
-    #Provide the valid image name and version for fabric tools
-    #Eg. fabrictools: hyperledger/fabric-tools:1.4.0
-    fabrictools: ghcr.io/hyperledger/bevel-fabric-tools:2.2.2
-    #Provide the valid image name and version to read certificates from vault server
-    #Eg.alpineutils: ghcr.io/hyperledger/bevel-alpine:latest
-    alpineutils: ghcr.io/hyperledger/bevel-alpine:latest
+  cluster:
+    provider: azure  # choose from: minikube | aws | azure | gcp
+    cloudNativeServices: false # only 'false' is implemented
+
+# HLF Network Version
+network:
+  version: 2.2.2
+
+image:
+  #Provide the valid image name and version for fabric tools
+  #Eg. fabrictools: hyperledger/fabric-tools:1.4.0
+  fabricTools: ghcr.io/hyperledger/bevel-fabric-tools
+  #Provide the valid image name and version to read certificates from vault server
+  #Eg.alpineUtils: ghcr.io/hyperledger/bevel-alpine:latest
+  alpineUtils: ghcr.io/hyperledger/bevel-alpine:latest
 
 storage:
-  #Provide the storageclassname
-  class: aws-storageclass
-  #Provide the storagesize
-  size: 256Mi
-
-vault:
-  #Provide the vaultrole for an organization
-  #Eg. vaultrole: vault-role
-  role: vault-role
-  #Provide the vault server address
-  #Eg. vaultaddress: http://Vault-884963190.eu-west-1.elb.amazonaws.com
-  address:
-  #Provide the kubernetes auth backed configured in vault for an organization
-  #Eg. authpath: fra-demo-hlkube-cluster-org1
-  authpath: devorg1-net-auth
-  #Provide the value for vault secretprefix
-  #Eg. adminsecretprefix: secretsv2/data/crypto/peerOrganizations/.../users/admin
-  adminsecretprefix: secretsv2/data/crypto/peerOrganizations/org1-net/users/admin
-  #Provide the value for vault secretprefix
-  #Eg. orderersecretprefix: secretsv2/data/crypto/peerOrganizations/.../orderer
-  orderersecretprefix: secretsv2/data/crypto/peerOrganizations/org1-net/orderer
-  #Provide the serviceaccountname for vault
-  #Eg. serviceaccountname: vault-auth
-  serviceaccountname: vault-auth
-  #Provide the type of vault
-  #Eg. type: hashicorp
-  type: hashicorp
-  #Provide the imagesecretname for vault
-  #Eg. imagesecretname: regcred
-  imagesecretname: ""
-  #Kuberenetes secret for vault ca.cert
-  #Enable or disable TLS for vault communication if value present or not
-  #Eg. tls: vaultca
-  tls: 
-
+    #Provide the storagesize
+    size: 256Mi
 
 peer:
-  #Provide the name of the peer as per deployment yaml.
-  #Eg. name: peer0
-  name: peer0
-  #Provide the localmspid for organization
-  #Eg. localmspid: Org1MSP
-  localmspid: Org1MSP
-  #Provide the value for tlsstatus to be true or false for organization's peer
-  #Eg. tlsstatus: true
-  tlsstatus: true
+  #Provide the localMspId for organization
+  #Eg. localMspId: supplychainMSP
+  localMspId: supplychainMSP
+  #Provide the value for tlsStatus to be true or false for organization's peer
+  #Eg. tlsStatus: true
+  tlsStatus: true
   #Provide the address for the peer
-  #Eg: address: peer0.org1-net:7051
-  address: peer0.org1-net:7051
+  #Eg: address: test.blockchaincloudpoc.com
+  address: test.blockchaincloudpoc.com
 
 orderer:
   #Provide the address for orderer
-  #Eg. address: orderer1.org1proxy.blockchaincloudpoc.com:443
-  address: orderer1.org1proxy.blockchaincloudpoc.com:443
+  #Eg. address: orderer1.test.blockchaincloudpoc.com:443
+  address: orderer1.test.blockchaincloudpoc.com:443
 
 labels:
   service: []
