--- a/platforms/hyperledger-fabric/charts/fabric-orderernode/templates/configmap.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-orderernode/templates/configmap.yaml
@@ -7,27 +7,29 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ $.Values.orderer.name }}-config
-  namespace: {{ $.Values.metadata.namespace }}
+  name: {{ .Release.Name }}-config
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ $.Values.orderer.name }}-config
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/component: fabric
+    app.kubernetes.io/part-of: {{ include "fabric-orderernode.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    {{- include "labels.custom" . | nindent 2 }}
 data:
-  FABRIC_LOGGING_SPEC: {{ $.Values.orderer.loglevel }}
+  FABRIC_LOGGING_SPEC: {{ $.Values.orderer.logLevel }}
   ORDERER_GENERAL_LISTENADDRESS: 0.0.0.0
-{{ if contains "2.5" $.Values.metadata.network.version }}
+{{ if contains "2.5" $.Values.network.version }}
   ORDERER_GENERAL_BOOTSTRAPMETHOD: "none"
 {{ else }}
   ORDERER_GENERAL_GENESISMETHOD: file
   ORDERER_GENERAL_GENESISFILE: /var/hyperledger/orderer/orderer.genesis.block
 {{ end }}
-  ORDERER_GENERAL_LOCALMSPID: {{ $.Values.orderer.localmspid }}
-  ORDERER_GENERAL_KEEPALIVE_SERVERINTERVAL: {{ $.Values.orderer.keepaliveserverinterval }}
+  ORDERER_GENERAL_LOCALMSPID: {{ $.Values.orderer.localMspId }}
+  ORDERER_GENERAL_KEEPALIVE_SERVERINTERVAL: {{ $.Values.orderer.keepAliveServerInterval }}
   ORDERER_GENERAL_LOCALMSPDIR: /var/hyperledger/orderer/crypto/msp
-  ORDERER_GENERAL_TLS_ENABLED: "{{ $.Values.orderer.tlsstatus }}"
+  ORDERER_GENERAL_TLS_ENABLED: "{{ $.Values.orderer.tlsStatus }}"
   ORDERER_GENERAL_TLS_PRIVATEKEY: /var/hyperledger/orderer/crypto/tls/server.key
   ORDERER_GENERAL_TLS_CERTIFICATE: /var/hyperledger/orderer/crypto/tls/server.crt
   ORDERER_GENERAL_TLS_ROOTCAS: '[/var/hyperledger/orderer/crypto/tls/ca.crt]'
@@ -40,7 +42,7 @@ data:
   ORDERER_KAFKA_VERBOSE: "true"
   GODEBUG: "netdns=go"
   ORDERER_OPERATIONS_LISTENADDRESS: 0.0.0.0:10443
-{{ if contains "2.5" $.Values.metadata.network.version }}
+{{ if contains "2.5" $.Values.network.version }}
   ORDERER_ADMIN_LISTENADDRESS: 0.0.0.0:7055
   ORDERER_ADMIN_TLS_ENABLED: "true"
   ORDERER_ADMIN_TLS_PRIVATEKEY: /var/hyperledger/orderer/crypto/tls/server.key
@@ -50,18 +52,20 @@ data:
 {{ end }}
 
 ---
-{{- if ne $.Values.metadata.network.version "2.5.4" }}
+{{- if ne $.Values.network.version "2.5.4" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: genesis-block-{{ $.Values.orderer.name }}
-  namespace: {{ $.Values.metadata.namespace }}
+  name: genesis-block-{{ .Release.Name }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: genesis-block
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/component: fabric
+    app.kubernetes.io/part-of: {{ include "fabric-orderernode.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    {{- include "labels.custom" . | nindent 2 }}
 data:
   genesis.block.base64: {{ .Values.genesis | quote }}
 {{ end }}
