--- a/platforms/hyperledger-fabric/charts/fabric-peernode/templates/configmap.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-peernode/templates/configmap.yaml
@@ -7,28 +7,29 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ $.Values.peer.name }}-config
-  namespace: {{ $.Values.metadata.namespace }}
+  name: {{ .Release.Name }}-config
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ $.Values.peer.name }}-config
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/name: {{ .Release.Name }}-config
+    app.kubernetes.io/component: fabric
+    app.kubernetes.io/part-of: {{ include "fabric-peernode.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    {{- include "labels.custom" . | nindent 2 }}
 data:
   CORE_VM_ENDPOINT: unix:///host/var/run/docker.sock
-  CORE_PEER_ID: {{ $.Values.peer.name }}.{{ $.Values.metadata.namespace }}
-  FABRIC_LOGGING_SPEC: "grpc=debug:{{ $.Values.peer.loglevel }}"
+  CORE_PEER_ID: {{ .Release.Name }}.{{ .Release.Namespace }}
+  FABRIC_LOGGING_SPEC: "grpc=debug:{{ $.Values.peer.logLevel }}"
   CORE_LEDGER_STATE_STATEDATABASE: CouchDB
   CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS: localhost:5984
   CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME: "{{ $.Values.peer.couchdb.username }}"
-  CORE_PEER_ADDRESS: {{ $.Values.peer.name }}.{{ $.Values.metadata.namespace }}:{{ $.Values.service.ports.grpc.clusteripport }}
-  CORE_PEER_GOSSIP_BOOTSTRAP: {{ $.Values.peer.gossippeeraddress }}
-  {{ if $.Values.peer.gossipexternalendpoint }}
-  CORE_PEER_GOSSIP_EXTERNALENDPOINT: {{ $.Values.peer.gossipexternalendpoint }}
+  CORE_PEER_ADDRESS: {{ .Release.Name }}.{{ .Release.Namespace }}:{{ $.Values.service.ports.grpc.clusterIpPort }}
+  CORE_PEER_GOSSIP_BOOTSTRAP: {{ .Release.Name }}.{{ $.Values.peer.gossipPeerAddress }}
+  {{ if $.Values.peer.gossipExternalEndpoint }}
+  CORE_PEER_GOSSIP_EXTERNALENDPOINT: {{ .Release.Name }}.{{ $.Values.peer.gossipExternalEndpoint }}
   {{ end }}
-  CORE_PEER_LOCALMSPID: {{ $.Values.peer.localmspid }}
-  CORE_PEER_TLS_ENABLED: "{{ $.Values.peer.tlsstatus }}"
+  CORE_PEER_LOCALMSPID: {{ $.Values.cli.peer.localMspId }}
+  CORE_PEER_TLS_ENABLED: "{{ $.Values.cli.peer.tlsStatus }}"
   CORE_PEER_TLS_CERT_FILE: /etc/hyperledger/fabric/crypto/tls/server.crt
   CORE_PEER_TLS_KEY_FILE: /etc/hyperledger/fabric/crypto/tls/server.key
   CORE_PEER_TLS_ROOTCERT_FILE: /etc/hyperledger/fabric/crypto/msp/tlscacerts/tlsca.crt
@@ -36,58 +37,61 @@ data:
   CORE_PEER_GOSSIP_ORGLEADER: "false"
   CORE_PEER_PROFILE_ENABLED: "true"
   CORE_PEER_ADDRESSAUTODETECT: "true"
-  CORE_PEER_NETWORKID: {{ $.Values.peer.name }}.{{ $.Values.metadata.namespace }}
+  CORE_PEER_NETWORKID: {{ .Release.Name }}.{{ .Release.Namespace }}
   CORE_PEER_MSPCONFIGPATH: /etc/hyperledger/fabric/crypto/msp
   GODEBUG: "netdns=go"
   CORE_PEER_GOSSIP_SKIPHANDSHAKE: "true"
-  CORE_CHAINCODE_BUILDER: "{{ $.Values.peer.builder }}"
+  CORE_CHAINCODE_BUILDER: "{{ $.Values.peer.builder }}:{{ $.Values.cli.network.version }}"
   CORE_OPERATIONS_LISTENADDRESS: 0.0.0.0:9443
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ $.Values.peer.name }}-msp-config
-  namespace: {{ $.Values.metadata.namespace }}
+  name: {{ .Release.Name }}-msp-config
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ $.Values.peer.name }}-msp-config
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/name: {{ .Release.Name }}-msp-config
+    app.kubernetes.io/component: fabric
+    app.kubernetes.io/part-of: {{ include "fabric-peernode.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    {{- include "labels.custom" . | nindent 2 }}
 data:
-  mspconfig: |
-    {{if  ($.Values.peer.mspconfig.organizationalunitidentifiers) }}
-      OrganizationalUnitIdentifiers:{{ range $.Values.peer.mspconfig.organizationalunitidentifiers }}
+  mspConfig: |
+    {{if  ($.Values.peer.mspConfig.organizationalUnitIdentifiers) }}
+      OrganizationalUnitIdentifiers:{{ range $.Values.peer.mspConfig.organizationalUnitIdentifiers }}
         - Certificate: cacerts/ca.crt
           OrganizationalUnitIdentifier: {{ . }}{{ end }}{{end}}
       NodeOUs:
         Enable: true
         ClientOUIdentifier:
           Certificate: cacerts/ca.crt
-          OrganizationalUnitIdentifier: {{ $.Values.peer.mspconfig.nodeOUs.clientOUidentifier.organizationalunitidentifier }}
+          OrganizationalUnitIdentifier: {{ $.Values.peer.mspConfig.nodeOUs.clientOUIdentifier.organizationalUnitIdentifier }}
         PeerOUIdentifier:
           Certificate: cacerts/ca.crt
-          OrganizationalUnitIdentifier: {{ $.Values.peer.mspconfig.nodeOUs.peerOUidentifier.organizationalunitidentifier }}
+          OrganizationalUnitIdentifier: {{ $.Values.peer.mspConfig.nodeOUs.peerOUIdentifier.organizationalUnitIdentifier }}
         AdminOUIdentifier:
           Certificate: cacerts/ca.crt
-          OrganizationalUnitIdentifier: {{ $.Values.peer.mspconfig.nodeOUs.adminOUidentifier.organizationalunitidentifier }}
+          OrganizationalUnitIdentifier: {{ $.Values.peer.mspConfig.nodeOUs.adminOUIdentifier.organizationalUnitIdentifier }}
         OrdererOUIdentifier:
           Certificate: cacerts/ca.crt
-          OrganizationalUnitIdentifier: {{ $.Values.peer.mspconfig.nodeOUs.ordererOUidentifier.organizationalunitidentifier }}
+          OrganizationalUnitIdentifier: {{ $.Values.peer.mspConfig.nodeOUs.ordererOUIdentifier.organizationalUnitIdentifier }}
 
-{{ if $.Values.peer.configpath }}
 ---
+{{- $file := .Files.Get "files/core.yaml" }}
+{{ if $file }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: builders-config
-  namespace: {{ $.Values.metadata.namespace }}
+  name:  {{ .Release.Name }}-builders-config
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: builders-config
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/component: fabric
+    app.kubernetes.io/part-of: {{ include "fabric-peernode.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }} 
-    {{- include "labels.custom" . | nindent 2 }}
 data:
-  core.yaml.base64: {{ .Values.peer.core | quote }}
+  core.yaml: {{ .Files.Get "files/core.yaml" | nindent 8 | quote }}
 {{ end }}
