feat(substrate): platform deployment via Helm
This pull request introduces enhanced functionality to deploy the Substrate platform using Helm charts. Several improvements have been made to streamline the process and increase readability:

1. Substrate-genesis:
   - The substrate-genesis Helm chart now dynamically generates keys and updates the genesis.json file accordingly.
   - Eliminates the need for the substrate-key-chart Helm chart, achieving the same functionality within the substrate-genesis chart.
   - Once the entire Substrate codebase is updated, substrate-key-mgmt can be safely removed.

2. Substrate-node:
   - The substrate-node chart handles node deployment, simplifying the overall process.
   - Improved readability and maintainability by removing the repetetive code and containers such as node-secrets, retrieve-chain-spec, inject-keys, and query-services.
   - Their functionalities have been incorporated into the main container responsible for starting the node.

3. dscp-ipfs-node
   - Updated for deployment via Helm.

4. A README.md has been added at the path ./platform/substrate/charts/ to provide guidance for deploying the Substrate platform via Helm.

These enhancements aim to streamline Substrate deployment via Helm, making the process more efficient and the codebase easier to manage.

fixes #2484

Signed-off-by: saurabhkumarkardam <saurabh.kumar.kardam@accenture.com>

--- a/platforms/substrate/charts/dscp-ipfs-node/templates/statefulset.yaml
+++ b/platforms/substrate/charts/dscp-ipfs-node/templates/statefulset.yaml
@@ -1,3 +1,9 @@
+##############################################################################################
+#  Copyright Accenture. All Rights Reserved.
+#
+#  SPDX-License-Identifier: Apache-2.0
+##############################################################################################
+
 {{ $fullname :=  include "dscp-ipfs.fullname" . }}
 apiVersion: apps/v1
 kind: StatefulSet
@@ -21,7 +27,7 @@ spec:
       labels:
         name: {{ include "dscp-ipfs.fullname" . }}
     spec:
-      serviceAccountName: {{ $.Values.vault.serviceaccountname }}
+      serviceAccountName: {{ $.Values.global.serviceAccountName }}
       {{- include "dscp-ipfs.imagePullSecrets" . | indent 6 }}
       volumes:
         - name: package-manager
@@ -82,21 +88,22 @@ spec:
             - mountPath: {{ .Values.config.ipfsDataPath }}
               name: ipfs-data
         {{- end }}
-        {{- if eq .Values.vault.provider "hashicorp" }}
         - name: ipfs-init
           image: {{ .Values.initContainer.image }}
           imagePullPolicy: {{ .Values.initContainer.pullPolicy | quote }}
           env:
             - name: MOUNT_PATH
               value: {{ .Values.config.ipfsDataPath }}
+{{- if eq .Values.global.vault.type "hashicorp" }}
             - name: VAULT_ADDR
-              value: {{ $.Values.vault.address }}
+              value: {{ $.Values.global.vault.address }}
             - name: KUBERNETES_AUTH_PATH
-              value: {{ $.Values.vault.authpath }}
+              value: {{ $.Values.global.vault.authpath }}
             - name: VAULT_APP_ROLE
-              value: {{ $.Values.vault.role }}
+              value: {{ $.Values.global.vault.role }}
             - name: CERTS_SECRET_PREFIX
-              value: {{ .Values.vault.certsecretprefix }}   
+              value: {{ .Values.global.vault.certsecretprefix }}
+{{- end }}
           volumeMounts:
             - mountPath: {{ .Values.config.ipfsDataPath }}
               name: ipfs-data
@@ -107,7 +114,7 @@ spec:
           args:
             - |-
               #!/usr/bin/env bash
-
+{{- if eq .Values.global.vault.type "hashicorp" }}
               echo "validating vault response"
               validateVaultResponse () {
                 if echo ${2} | grep "errors"; then
@@ -130,6 +137,7 @@ spec:
                 fi
               }
               echo "done validating vault response"
+{{- end }}
 
               . /scripts/package-manager.sh
               # Define the packages to install
@@ -141,6 +149,7 @@ spec:
               peer_id=$(cat config | jq -r .Identity.PeerID)
               private_key=$(cat config | jq -r .Identity.PrivKey)
 
+{{- if eq .Values.global.vault.type "hashicorp" }}
               echo "
                 {
                   \"data\": {
@@ -168,7 +177,7 @@ spec:
                 jq -r 'if .errors then . else .auth.client_token end')
               validateVaultResponse " secret $vault_secret_key" "${LOOKUP_SECRET_RESPONSE}" "LOOKUPSECRETRESPONSE"
               echo "Done saving keys in vault"
-        {{- end }}    
+{{- end }}
       containers:
         - name: {{ include "dscp-ipfs.fullname" . }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -252,7 +261,7 @@ spec:
       spec:
         accessModes: [ "ReadWriteOnce" ]
         {{- if .Values.storage.storageClass }}
-        storageClassName: {{ .Values.storage.storageClass }}
+        storageClassName: storage-{{ .Release.Name }}
         {{- end }}
         resources:
           requests:
